err/ptm.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ptm'...
Listing './lib/python3.5/site-packages/ptm/actions'...
Listing './lib/python3.5/site-packages/ptm/adventure_managment'...
Listing './lib/python3.5/site-packages/ptm/adventure_managment/spells'...
Listing './lib/python3.5/site-packages/ptm/adventure_managment/spells/implementations'...
Compiling './lib/python3.5/site-packages/ptm/adventure_managment/spells/recipe.py'...
***   File "./lib/python3.5/site-packages/ptm/adventure_managment/spells/recipe.py", line 7
    synonyms: List[str]
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ptm/templates'...
Listing './lib/python3.5/site-packages/ptm/templates/adventure_template'...
Listing './lib/python3.5/site-packages/ptm/templates/adventure_template/extensions'...
Listing './lib/python3.5/site-packages/ptm/templates/adventure_template/smithy'...
Listing './lib/python3.5/site-packages/ptm/templates/adventure_template/travels'...
Listing './lib/python3.5/site-packages/ptm/templates/adventure_template/treasy'...
Listing './lib/python3.5/site-packages/ptm-0.0.1a4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
